--- a/index.html
+++ b/index.html
@@ -5,26 +5,121 @@
 <title>bakery</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap-custom.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110117210-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110117210-1');
+</script>
+
 </head>
 
 <body>
 
 <header>
-	<div class="container">
+	<!--<div class="container">
 		<img src="img/bakery-logo.png" width="100px">
-	</div>
+	</div>-->
+	<nav class="navbar navbar-default">
+              <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="index.html" width><img src="img/bakery-logo.png" width="60px"></a>
+                </div>
+            
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="nav">
+                  <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="index.html">Products</a></li>
+                        <li><a href="#sec-studies">Purchase</a></li>
+                        <li><a href="#sec-testimonials">Support</a></li>
+                        <li><a href="#">Corporate</a></li>
+                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Nosotros <span class="caret"></span></a>
+                        	<ul class="dropdown-menu">
+                            	<li><a href="#">Acerca de</a></li>
+                                <li><a href="#">Quienes Somos</a></li>
+                            </ul>
+                        </li>
+                  </ul>
+                </div><!-- /.navbar-collapse -->
+              </div><!-- /.container-fluid -->
+            </nav>
 </header>
 
 
 <section id="sec-slides">
-	<div class="container text-center">
+	<!--<div class="container text-center">
 		<h4>the best place for the finest</h4>
 		<h2>breads and cakes</h2>
 		<p>We strive for consistency so that each visit to our bakery delivers the same reliably satisfying experience while offering an exciting variety of products. </p>
 		<a href="#" class="btn btn-warning btn-lg">Our Benefits</a>
 		<a href="#" class="btn btn-default btn-lg">Virtual Tour</a>
-	</div>
+	</div>-->
+	<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="img/slider-1.jpg" alt="slide 1">
+      <div class="carousel-caption">
+      <h4>the best place for the finest</h4>
+		<h2>breads and cakes</h2>
+		<p class="hidden-xs">We strive for consistency so that each visit to our bakery delivers the same reliably satisfying experience while offering an exciting variety of products. </p>
+		<a href="#" class="btn btn-warning btn-lg hidden-xs">Our Benefits</a>
+		<a href="#" class="btn btn-default btn-lg hidden-xs">Virtual Tour</a>
+		</div>
+    </div>
+
+    <div class="item">
+      <img src="img/slider-2.jpg" alt="slide-2">
+       <div class="carousel-caption">
+      <h4>the best place for the finest</h4>
+		<h2>breads and cakes</h2>
+		<p>We strive for consistency so that each visit to our bakery delivers the same reliably satisfying experience while offering an exciting variety of products. </p>
+		<a href="#" class="btn btn-warning btn-lg">Our Benefits</a>
+		<a href="#" class="btn btn-default btn-lg">Virtual Tour</a>
+		</div>      
+    </div>
+
+    <div class="item">
+      <img src="img/slider-3.jpg" alt="slide-3">
+       <div class="carousel-caption">
+      <h4>the best place for the finest</h4>
+		<h2>breads and cakes</h2>
+		<p>We strive for consistency so that each visit to our bakery delivers the same reliably satisfying experience while offering an exciting variety of products. </p>
+		<a href="#" class="btn btn-warning btn-lg">Our Benefits</a>
+		<a href="#" class="btn btn-default btn-lg">Virtual Tour</a>
+		</div>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 </section>
 
 
